@@ -48,6 +48,7 @@
    - ofaPReferences: move user interface to GResource (todo #826).
    - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
    - ofoAccount: migrate to G_ADD_PRIVATE (todo #994).
+   - ofoBat: migrate to G_ADD_PRIVATE (todo #994).
    - ofoBase: migrate to G_ADD_PRIVATE (todo #994).
 
 -----------------------------------------------------------------------
